Brought plugin inline with radar-schemas/radar-commons-android

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="biovotionLabel">Biovotion</string>
+    <string name="biovotionDescription">Collects data from Biovotion VSM1. Turn on the VSM1 to
+        connect. The connection is made over Bluetooth using the location permission. Location
+        information is not stored.
+    </string>
 </resources>
